[package]
name = "quantitative_trading"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ta = "0.5.0"

[[bin]]
name = "quantitative_trading_v2"
path = "src/quantitative_trading_v2.rs"