[package]
name = "rig_rss"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
tokio = { version = "1.34", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
rss = "2.0"
regex = "1"